--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         accounts = await web3.eth.getAccounts();
         document.getElementById('walletAddress').innerText = `Wallet Address: ${accounts[0]}`;
       } else {
-        window.location.href = 'https://metamask.app.link/dapp/fclmail.github.io/100xmetamaskpay/';
+        window.location.href = 'https://metamask.app.link/dapp/fclmail.github.io/metamaskpcandroid/';
       }
     }
 
